--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "data-table",
     "react-data-table"
   ],
-  "author": "",
+  "author": "Cosmin Ciolacu",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Cosmin-Ciolacu/react-data-table-tailwind"
+  },
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.5.1",
